syntax = "proto3";

package rivet.backend.pkg.team.validate;

import "resources/legacy/proto/common.proto";

message Request {
	string display_name = 1;
}

message Response {
	repeated rivet.common.ValidationError errors = 1;
}
